k8s/main/backend/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: main
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30002 
  type: NodePort
