k8s/main/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: main
  annotations: 
    kubernetes.io/ingress.class: traefik  
spec:
  rules:
  - host: biome-main.com  
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 3000
